# modyra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  angular.json  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.changeset/: audit-fixes-security-array.md  config.json  core-subpath-slimming.md  cyan-llamas-obey.md  dynamic-contract-v2.md  injection-prevention.md  option-whitelisting.md  reactivity-adapter-api.md  standard-schema-adapter.md  thick-cats-add.md  wild-forms-validate.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
apps/plain-preview/: build.mjs  index.html  package.json  (+2 more)
docs/: LIT-STATUS.md  README.md  reactivity-capability-matrix.md
e2e/: demo.spec.ts
scripts/: api-surface.mjs  audit-theme-classes.mjs  build-examples.mjs  check-bundle.mjs  check-core-bundle.mjs  check-studio-app.mjs  copy-studio-app.mjs  pack-analyze.mjs  prepare-angular-dist.mjs  publish-angular.mjs  publish-workspace.mjs  reactivity-capability-matrix.mjs  serve-example.mjs  serve-static.mjs  sync-docs-site.mjs  theme-parity-allowlist.json
sdk/rust/examples/axum-form-server/: Cargo.toml
sdk/rust/examples/axum-form-server/src/: main.rs
sdk/rust/examples/post-form/: Cargo.toml
sdk/rust/examples/post-form/src/: main.rs
sdk/rust/modyra-contract/: Cargo.toml
sdk/rust/modyra-contract/src/: lib.rs
sdk/rust/modyra-contract/tests/: contract.rs
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
spec/: dynamic-form-v2.schema.json
(+224 files in other folders)
