[package]
name = "modyra-axum-form-server-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
modyra-contract = { path = "../../modyra-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
